kubernetes/apps/TACOS/terrakube-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: terrakube-api-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: terrakube-api
  ports:
  - port: 8080
    targetPort: 8080
